// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generic Resources Resolver Correctly Resolves Create Resources Mutation 1`] = `
Object {
  "data": Object {
    "createResources": Object {
      "errors": Array [],
      "result": Array [
        Object {
          "data": Object {
            "createResources": Object {
              "errors": Array [],
              "result": Array [
                Object {
                  "apiVersion": "policy.mcm.ibm.com/v1alpha1",
                  "kind": "Policy",
                  "metadata": Object {
                    "creationTimestamp": "2019-07-24T16:13:38Z",
                    "generation": 1,
                    "name": "test-policy",
                    "namespace": "mcm",
                    "resourceVersion": "1688805",
                    "selfLink": "/apis/policy.mcm.ibm.com/v1alpha1/namespaces/mcm/policies/test-policy",
                    "uid": "fec7f06c-ae2d-11e9-8a41-005056a061f1",
                  },
                  "spec": Object {
                    "complianceType": "musthave",
                    "namespaces": Object {
                      "exclude": Array [
                        "kube-*",
                      ],
                      "include": Array [
                        "default",
                      ],
                    },
                    "remediationAction": "inform",
                  },
                },
              ],
            },
          },
        },
      ],
    },
  },
}
`;

exports[`Generic Resources Resolver Correctly Resolves Update Resource Labels Mutation 1`] = `
Object {
  "data": Object {
    "updateResourceLabels": null,
  },
  "errors": Array [
    Object {
      "locations": Array [
        Object {
          "column": 11,
          "line": 3,
        },
      ],
      "message": "Nock: No match for request {
  \\"method\\": \\"PATCH\\",
  \\"url\\": \\"http://0.0.0.0/kubernetes/apis/clusterregistry.k8s.io/v1alpha1/namespaces/cluster1/clusters/cluster1\\",
  \\"headers\\": {
    \\"authorization\\": \\"localdev\\",
    \\"content-type\\": \\"application/json-patch+json\\",
    \\"host\\": \\"0.0.0.0\\",
    \\"accept\\": \\"application/json\\",
    \\"content-length\\": 138
  },
  \\"body\\": \\"[{\\\\\\"op\\\\\\":\\\\\\"replace\\\\\\",\\\\\\"value\\\\\\":[{\\\\\\"op\\\\\\":\\\\\\"replace\\\\\\",\\\\\\"path\\\\\\":\\\\\\"/metadata/labels\\\\\\",\\\\\\"value\\\\\\":{\\\\\\"cloud\\\\\\":\\\\\\"IBM\\\\\\",\\\\\\"datacenter\\\\\\":\\\\\\"toronto\\\\\\",\\\\\\"environment\\\\\\":\\\\\\"Dev\\\\\\"}}]}]\\"
}",
      "path": Array [
        "updateResourceLabels",
      ],
    },
  ],
}
`;

exports[`Generic Resources Resolver Correctly Resolves Update Resource Mutation 1`] = `
Object {
  "data": Object {
    "updateResource": Object {
      "data": Object {
        "updateResource": Object {
          "apiVersion": "policy.mcm.ibm.com/v1alpha1",
          "kind": "Policy",
          "metadata": Object {
            "annotations": Object {
              "policy.mcm.ibm.com/categories": "hello",
              "policy.mcm.ibm.com/controls": "",
              "policy.mcm.ibm.com/standards": "",
              "seed-generation": "1",
            },
            "creationTimestamp": "2019-07-24T13:27:59Z",
            "finalizers": Array [
              "propagator.finalizer.mcm.ibm.com",
            ],
            "generation": 6,
            "name": "test-policy",
            "namespace": "mcm",
            "resourceVersion": "1673886",
            "selfLink": "/apis/policy.mcm.ibm.com/v1alpha1/namespaces/mcm/policies/test-policy",
            "uid": "da8f9553-ae16-11e9-8a41-005056a061f1",
          },
          "spec": Object {
            "complianceType": "musthave",
            "namespaces": Object {
              "exclude": Array [
                "kube-*",
              ],
              "include": Array [
                "default",
              ],
            },
            "object-templates": Array [
              Object {
                "complianceType": "musthave",
                "objectDefinition": Object {
                  "apiVersion": "v1",
                  "kind": "LimitRange",
                  "metadata": Object {
                    "name": "mem-limit-range",
                  },
                  "spec": Object {
                    "limits": Array [
                      Object {
                        "default": Object {
                          "memory": "512Mi",
                        },
                        "defaultRequest": Object {
                          "memory": "256Mi",
                        },
                        "type": "Container",
                      },
                    ],
                  },
                },
              },
            ],
            "remediationAction": "inform",
          },
        },
      },
    },
  },
}
`;
